[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.13",
    "hatch-vcs>=0.3",
]

[project]
name = "toolforge"
description = "Small library for common tasks on Wikimedia Toolforge"
readme = "README.rst"
keywords = [
    "wikimedia",
    "toolforge",
]
license = "GPL-3.0+"
maintainers = [
    { name = "Bryan Davis", email = "bd808@wikimedia.org" },
    { name = "Lucas Werkmeister", email = "mail@lucaswerkmeister.de" },
]
authors = [
    { name = "Kunal Mehta", email = "Legoktm@debian.org" },
]
requires-python = ">=3.7"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dynamic = [
    "version",
]
dependencies = [
    "requests>=2.28.2",
    "pymysql>=1.0.3",
]

[project.urls]
Homepage = "https://wikitech.wikimedia.org/wiki/User:Legoktm/toolforge_library"
"Bug Tracker" = "https://phabricator.wikimedia.org/tag/tool-python-toolforge/"
Source = "https://gitlab.wikimedia.org/toolforge-repos/python-toolforge"

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.targets.sdist.include = [
    "/COPYING",
    "/src",
    "/tests",
    "/tox.ini",
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
